# gazelle

./: README.ipynb  demo.ipynb  hubconf.py  main.py  pyproject.toml  setup.py
data_prep/: preprocess_gazefollow.py  preprocess_vat.py
gazelle/: backbone.py  model.py  utils.py
scripts/: eval_gazefollow.py  eval_vat.py
src/: main.py
src/utils/: web_camera.py  window.py
